tests/reference/asr-test_zero_division-3dd84e8.stderr
semantic error: integer division by zero is not allowed
 --> tests/errors/test_zero_division.py:4:16
  |
4 |     print(i // 0)
  |                ^ integer division by zero
